assets/css/style.css
/* General Styles */
:root {
  --primary-color: #111;
  --secondary-color: #818181;
  --tertiary-color: #3c3a3a;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'secret_typewriterregular';
  transition: background-color .5s;
}

.section-title {
  color: var(--primary-color);
  border-bottom: 3px solid;
  padding: 20px;
  text-align: center;
  margin: 0 auto 35px auto;
  width: 50%;
  font-size: 65px;
}

.title {
  text-align: center;
}
/* End General Styles */

/* Header Styles */
header {
  height: 175px;
}

header h1 {
  padding-top: 25px;
  font-size: 100px;
  text-align: center;
}

.header img {
  width: 100px;
  height: auto;
  position: absolute;
  right: 50px;
  top: 15px;
}
/* End Header Styles */


/* Navbar Styles */
.sidenav {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: var(--primary-color);
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
}

.sidenav a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 25px;
  color: white;
  display: block;
  transition: 0.3s;
}

.sidenav a:hover {
  color: var(--secondary-color);
}

.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

#main {
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  font-size: 35px;
  width: 50px;
  height: 45px;
  position: fixed;
  margin-top: 30px;
  margin-left: 30px;
  padding-bottom: 5px;
  border: 2px solid var(--primary-color);
  border-radius: 8px;
  transition: 0.3s ease-in-out;
}

#main:hover {
  transform: scale(1.1);
  background-color: var(--secondary-color);
}

@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }

  .sidenav a {
    font-size: 18px;
  }
}
/* End Navbar Styles */

/* Back To Top Button Styles */
#myBtn {
  display: none; 
  position: fixed;
  bottom: 20px;
  right: 30px;
  border: 2px solid var(--primary-color);
  background-color: var(--secondary-color);
  outline: none;
  color: #111;
  cursor: pointer; 
  border-radius: 100%; 
  font-size: 25px;
  height: 50px;
  width: 50px;
  transition: 0.3s ease-in-out;
}

#myBtn:hover {
  transform: scale(1.1);
  
}
/* End Back To Top Button Styles */

/* Footer Styles */
footer {
  background: var(--primary-color);
  width: 100%;
  padding: 40px 35px;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

footer h2 {
  color: white;
  font-size: 20px;
  margin: 0;
}

footer div {
  line-height: 1.5;
  text-align: right;
}
/* Footer Styles */

/* Category Styles */
.category {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-evenly;
}

.category a {
  text-decoration: none;
  font-size: 35px;
  font-weight: 700;
  color: var(--primary-color);
  margin: 15px;
  transition: 0.3s;
  cursor: pointer;
}

.category a:hover {
  color: var(--secondary-color);
}
/* End Category Styles */

/* Hero Section Styles */
.hero {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  align-items: center;
}

.hero-image {
  font-size: 45px;
  text-align: center;
  width: 600px;
  height: 300px;
  margin: 50px;
  border: 1px solid var(--primary-color);
  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
}

.hero-image h2 {
  margin-top: 70px;
}

.hero-cta {
  width: 80%;
  text-align: center;
  margin: 3.5%;
  color: black;
  font-size: 18px;
  line-height: 1.2;
}

.hero-cta h2 {
  margin-bottom: 20px;
  font-size: 45px;
  color: var(--primary-color);
}

.hero-cta p {
  font-size: 25px;
}
/* End Hero Section Styles */

/* Links on Homepage Styles */
.links {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.links img {
  width: 300px;
  height: 80px;
  transition: 0.3s ease-in-out;
  margin: 0 50px 50px 50px;
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
}

.links img:hover {
  transform: scale(1.1);
}
/* End Links on Homepage Styles */

/* Contact Form Styles */
.contact-form {
  text-align: center;
  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
}

.contact-form label {
  font-size: 20px;
}

.contact-form input,
.contact-form textarea {
  border: 1px solid var(--primary-color);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: var(--primary-color);
  width: 90%;
  margin: 5px auto 15px auto;
  background-color: rgba(255, 255, 255, 0.75);
}

.contact-form input:focus,
.contact-form textarea:focus {
  background-color: rgba(255, 255, 255, 1);
  outline: none;
}

.contact-form button {
  cursor: pointer;
  width: 90%;
  border: none;
  background: var(--primary-color);
  color: white;
  text-align: center;
  padding: 15px 0;
  margin-bottom: 25px;
  font-size: 20px;
  font-family: 'secret_typewriterregular';
}

.contact-form button:hover {
  background: var(--secondary-color);
}

.contact-form h3 {
  margin: 25px;
  font-size: 35px;
  color: var(--primary-color);
}
/* End Contact Form Styles */

/* History of Soup Styles */
.history {
  display: flex;
  justify-content: center;
  align-items: center;
}

.soup {
  margin: 100px auto;
  width: 600px;
  height: 300px;
  font-size: 35px;
  text-align: center;
  border: 1px solid #111;
  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
}

.soup h2 {
  margin-top: 70px;
}
/* End History of Soup Styles */

/* Photo Styles */
.photo-title {
  font-size: 36px;
  text-align: left;
  margin-left: 55px;
  color: var(--primary-color);
  padding: 0 0 30px 30px;
}

.main {
  width: 100%;
  flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 20px 0px 60px 0px;
}

.gallery {
  display: grid;
  width: 90%;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 10px;
}

.gallery-item {
  cursor: pointer;
  overflow: hidden;
  margin: 15px;
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
}

.gallery-item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  transition: 0.3s ease-in-out;
}

.gallery-item img:hover {
  transform: scale(1.1);
}

/*Image modal*/
.modal {
  z-index: 9999;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.733);
  margin-top: -1px;
  animation: zoom 0.3s ease-in-out;
}

@keyframes zoom {
  from {
      transform: scale(0);
  }
  to {
      transform: scale(1);
  }
}

.modal img {
  width: 50%;
  object-fit: cover;
}

.closeBtn {
  color: rgba(255, 255, 255, 0.87);
  font-size: 25px;
  position: absolute;
  top: 0;
  right: 0;
  margin: 20px;
  cursor: pointer;
  transition: 0.2s ease-in-out;
}
.closeBtn:hover {
  color: rgb(255, 255, 255);
}
/* End Image modal */
/* End Photo Styles */

/* Roster Styles */
.cards-title {
  font-size: 36px;
  text-align: center;
  color: var(--primary-color);
  margin: 0;
}

.cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  padding: 5%;
}

.card {
  font-size: 25px;
  box-sizing: border-box;
  text-align: center;
  color: var(--primary-color);
  background-color: white;
  width: 300px;
  margin: 20px;
  padding: 20px;
  border: 1px solid var(--primary-color);
  box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
}

.card p {
  font-size: 20px;
  padding: 10px;
}

.card img {
  width: 150px;
  height: 150px;
  padding: 5%;
}

.patrol {
  padding: 100px;
}
/* End Roster Styles */

/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
@media screen and (max-width: 980px) {
  footer h2 footer div {
    text-align: center;
    width: 100%;
  }

  .hero-cta {
    width: 100%;
  }

  .hero-cta {
    text-align: center;
  }

  .contact-info iframe {
    flex: 1 100%;
  }

  .header img {
    margin: 0;
  }

  .gallery {
    grid-template-columns: repeat(2, 1fr);
  }
}

/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@media screen AND (max-width: 575px) {
  .hero-form button {
    width: 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }

  .contact-form {
    order: 3;
  }

  header h1 {
    display: none;
  }
  
  .hero-image h2 {
    margin-top: 70px;
    font-size: 35px;
  }

  .gallery {
    grid-template-columns: repeat(1, 1fr);
  }
}

